# AI-Horde-Worker

./: .bridgeData.yaml.swp  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  bridgeData_template.yaml  generate_docker_bridge_config.py  horde-scribe-bridge.cmd  horde-scribe-bridge.py  horde-scribe-bridge.sh  horde_scribe_bridge.py  logstats.py  pyproject.toml  requirements.dev.txt  requirements.txt  style.py
.github/workflows/: lint.yml  maintests.yml  prtests.yml
worker/: argparser.py  bridge_data.py  consts.py  enums.py  jobs.py  logger.py  scribe_worker.py  stats.py  ui.py
worker/bridge_data/: framework.py  scribe.py
worker/jobs/: poppers.py
worker/utils/: gpuinfo.py  set_envs.py
worker/workers/: framework.py  scribe.py
