[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_bridge"
authors = [
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic=["dependencies"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/AI-Horde-Worker"
"Bug Tracker" = "https://github.com/Haidra-Org/AI-Horde-Worker"
"Refactor Fork" = "https://github.com/TeaSitta/AI-Horde-Worker"

[tool.ruff]
line-length = 119
lint.select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  "B",
  "C4",
  "PIE",
  "RET",
  "SIM",
  "COM",
  # "D",
  "ANN"]
lint.ignore = [
  "ANN101",
  "ANN102",
  "ANN201", # temp?
  "ANN001", # temp?
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",]
extend-exclude = ["conda"]


[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
 \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 | dist
 | conda
)/
'''
